music-data: unify master entities lookup